[package]
name = "hidmon"
version = "0.1.0"
description = "Lightweight, callback-based HID (keyboard/mouse) monitoring"
authors = ["Brett Koenig <koenigbs18@outlook.com>"]
repository = "https://github.com/hidmon"
edition = "2021"
license = "Apache-2.0"

[dependencies]
errno = "0.3.10"
thiserror = "2.0.11"
windows = { "version" = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
